# onboarding

./: pyproject.toml
my_package/: bdayprob.py  bookcost.py  exphandle.py  findword.py  gcd.py  gridlines.py  invertdict.py  mergefiles.py  multiinherit.py  palindrome.py  removeduplicate.py  sortedlist.py  volumesphere.py
my_package/pack1/: addletter.py  avgtime.py  dotwice.py  duplicate.py  fibonacci.py  fifteen.py  phonever.py  simplecal.py
my_package/pack2/: button.py  buttons.py  canvas.py  checkbutton.py  checkbutton1.py  entryname.py  entrynumber.py  first.py  label.py  listbox.py  menu.py  message.py  radio1.py  radiobutton.py  scrollbar.py  spinbox.py
